--- a/Time to file OLS regression.ipynb
+++ b/Time to file OLS regression.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e05386bc",
+   "id": "70622b5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "71e6e836",
+   "id": "8084d7f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +25,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "1773b63e",
+   "execution_count": 25,
+   "id": "d7e1e305",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time_to_file</th>\n",
+       "      <th>units_total</th>\n",
+       "      <th>sqft_total</th>\n",
+       "      <th>yearbuilt_avg</th>\n",
+       "      <th>median_income_2019</th>\n",
+       "      <th>median_rent_2019</th>\n",
+       "      <th>median_value_2019</th>\n",
+       "      <th>part_black_2019</th>\n",
+       "      <th>part_latx_2019</th>\n",
+       "      <th>part_white_2019</th>\n",
+       "      <th>...</th>\n",
+       "      <th>change_part_college_14_19</th>\n",
+       "      <th>change_part_unemployed_14_19</th>\n",
+       "      <th>change_part_hh_kids_14_19</th>\n",
+       "      <th>change_part_female_head_14_19</th>\n",
+       "      <th>change_part_poverty_14_19</th>\n",
+       "      <th>change_part_vacant_14_19</th>\n",
+       "      <th>dist_to_nearest_highrenttract</th>\n",
+       "      <th>dist_to_nearest_highchangetract</th>\n",
+       "      <th>pctbuilt</th>\n",
+       "      <th>pctsold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "      <td>926.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2002.035637</td>\n",
+       "      <td>3.585313</td>\n",
+       "      <td>3253.403888</td>\n",
+       "      <td>1933.896328</td>\n",
+       "      <td>63571.082073</td>\n",
+       "      <td>1520.487041</td>\n",
+       "      <td>795156.693759</td>\n",
+       "      <td>8.340742</td>\n",
+       "      <td>43.951011</td>\n",
+       "      <td>32.313035</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.338431</td>\n",
+       "      <td>-5.383392</td>\n",
+       "      <td>-4.000357</td>\n",
+       "      <td>7.179586</td>\n",
+       "      <td>-7.388672</td>\n",
+       "      <td>1.529817</td>\n",
+       "      <td>1261.232165</td>\n",
+       "      <td>546.070791</td>\n",
+       "      <td>1.604773</td>\n",
+       "      <td>21.878221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3668.796621</td>\n",
+       "      <td>4.450662</td>\n",
+       "      <td>3693.684846</td>\n",
+       "      <td>21.489257</td>\n",
+       "      <td>27567.694395</td>\n",
+       "      <td>416.880948</td>\n",
+       "      <td>357255.028981</td>\n",
+       "      <td>10.075110</td>\n",
+       "      <td>27.021249</td>\n",
+       "      <td>26.687010</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.656739</td>\n",
+       "      <td>4.580440</td>\n",
+       "      <td>7.073937</td>\n",
+       "      <td>5.703942</td>\n",
+       "      <td>11.111925</td>\n",
+       "      <td>5.270687</td>\n",
+       "      <td>1415.453478</td>\n",
+       "      <td>671.750651</td>\n",
+       "      <td>2.173364</td>\n",
+       "      <td>4.713466</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 46 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       time_to_file  units_total   sqft_total  yearbuilt_avg  \\\n",
+       "count    926.000000   926.000000   926.000000     926.000000   \n",
+       "mean    2002.035637     3.585313  3253.403888    1933.896328   \n",
+       "std     3668.796621     4.450662  3693.684846      21.489257   \n",
+       "\n",
+       "       median_income_2019  median_rent_2019  median_value_2019  \\\n",
+       "count          926.000000        926.000000         926.000000   \n",
+       "mean         63571.082073       1520.487041      795156.693759   \n",
+       "std          27567.694395        416.880948      357255.028981   \n",
+       "\n",
+       "       part_black_2019  part_latx_2019  part_white_2019  ...  \\\n",
+       "count       926.000000      926.000000       926.000000  ...   \n",
+       "mean          8.340742       43.951011        32.313035  ...   \n",
+       "std          10.075110       27.021249        26.687010  ...   \n",
+       "\n",
+       "       change_part_college_14_19  change_part_unemployed_14_19  \\\n",
+       "count                 926.000000                    926.000000   \n",
+       "mean                   -1.338431                     -5.383392   \n",
+       "std                     5.656739                      4.580440   \n",
+       "\n",
+       "       change_part_hh_kids_14_19  change_part_female_head_14_19  \\\n",
+       "count                 926.000000                     926.000000   \n",
+       "mean                   -4.000357                       7.179586   \n",
+       "std                     7.073937                       5.703942   \n",
+       "\n",
+       "       change_part_poverty_14_19  change_part_vacant_14_19  \\\n",
+       "count                 926.000000                926.000000   \n",
+       "mean                   -7.388672                  1.529817   \n",
+       "std                    11.111925                  5.270687   \n",
+       "\n",
+       "       dist_to_nearest_highrenttract  dist_to_nearest_highchangetract  \\\n",
+       "count                     926.000000                       926.000000   \n",
+       "mean                     1261.232165                       546.070791   \n",
+       "std                      1415.453478                       671.750651   \n",
+       "\n",
+       "         pctbuilt     pctsold  \n",
+       "count  926.000000  926.000000  \n",
+       "mean     1.604773   21.878221  \n",
+       "std      2.173364    4.713466  \n",
+       "\n",
+       "[3 rows x 46 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summarystatdf1=ellissamplefinaldf[['time_to_file','units_total','sqft_total','yearbuilt_avg',\n",
+    "                       'median_income_2019','median_rent_2019','median_value_2019','part_black_2019',\n",
+    "                       'part_latx_2019', 'part_white_2019', 'part_female_head_2019', 'part_hh_kids_2019',\n",
+    "                       'part_rented_2019', 'part_unemployed_2019', 'part_poverty_2019', 'part_vacant_2019',\n",
+    "                       'part_college_2019','median_income_2014','median_rent_2014','median_value_2014','part_black_2014',\n",
+    "                       'part_latx_2014', 'part_white_2014', 'part_female_head_2014', 'part_hh_kids_2014',\n",
+    "                        'part_rented_2014', 'part_unemployed_2014', 'part_poverty_2014', 'part_vacant_2014',\n",
+    "                       'part_college_2014','change_rent_14_19', 'change_value_14_19', 'change_part_rented_14_19',\n",
+    "                       'change_part_white_14_19', 'change_part_black_14_19', 'change_part_latx_14_19',\n",
+    "                       'change_part_college_14_19', 'change_part_unemployed_14_19', 'change_part_hh_kids_14_19',\n",
+    "                       'change_part_female_head_14_19', 'change_part_poverty_14_19', 'change_part_vacant_14_19',\n",
+    "                       'dist_to_nearest_highrenttract', 'dist_to_nearest_highchangetract','pctbuilt','pctsold' ]].agg([\"count\",\"mean\",\"std\"])\n",
+    "summarystatdf1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ac3cd55d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summarystatdf1.to_csv('/Users/alexanderferrer/Documents/GitHub/UP229_Ellis/summarystatdf1.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1291f6ef",
    "metadata": {},
    "outputs": [
     {
@@ -35,61 +238,56 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:           time_to_file   R-squared:                       0.148\n",
-      "Model:                            OLS   Adj. R-squared:                  0.126\n",
-      "Method:                 Least Squares   F-statistic:                     6.815\n",
-      "Date:                Thu, 10 Jun 2021   Prob (F-statistic):           6.57e-20\n",
-      "Time:                        21:32:21   Log-Likelihood:                -8839.5\n",
-      "No. Observations:                 926   AIC:                         1.773e+04\n",
-      "Df Residuals:                     902   BIC:                         1.784e+04\n",
-      "Df Model:                          23                                         \n",
+      "Dep. Variable:           time_to_file   R-squared:                       0.144\n",
+      "Model:                            OLS   Adj. R-squared:                  0.127\n",
+      "Method:                 Least Squares   F-statistic:                     8.495\n",
+      "Date:                Tue, 15 Jun 2021   Prob (F-statistic):           2.07e-21\n",
+      "Time:                        20:41:42   Log-Likelihood:                -8841.6\n",
+      "No. Observations:                 926   AIC:                         1.772e+04\n",
+      "Df Residuals:                     907   BIC:                         1.781e+04\n",
+      "Df Model:                          18                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "===================================================================================================\n",
       "                                      coef    std err          t      P>|t|      [0.025      0.975]\n",
       "---------------------------------------------------------------------------------------------------\n",
-      "const                            1.949e+04   1.19e+04      1.642      0.101   -3810.608    4.28e+04\n",
-      "units_total                       126.8668     52.538      2.415      0.016      23.757     229.977\n",
-      "sqft_total                          0.0503      0.064      0.787      0.431      -0.075       0.176\n",
-      "yearbuilt_avg                      -5.9346      6.057     -0.980      0.327     -17.821       5.952\n",
-      "n_ll_properties                    -5.0242      7.437     -0.676      0.499     -19.620       9.572\n",
-      "n_ll_units                         -1.0573      0.922     -1.146      0.252      -2.867       0.753\n",
-      "landlord_iscorp                 -2015.4808    237.811     -8.475      0.000   -2482.208   -1548.754\n",
-      "median_income_2019                 -0.0144      0.014     -1.047      0.295      -0.041       0.013\n",
-      "median_rent_2019                   -0.6832      0.646     -1.057      0.291      -1.951       0.585\n",
-      "median_value_2019                   0.0003      0.001      0.677      0.499      -0.001       0.001\n",
-      "part_black_2019                   -11.4638     16.276     -0.704      0.481     -43.407      20.479\n",
-      "part_latx_2019                    -11.7271     14.209     -0.825      0.409     -39.613      16.159\n",
-      "part_white_2019                    18.6542     13.322      1.400      0.162      -7.492      44.801\n",
-      "part_female_head_2019             -56.0766     38.793     -1.446      0.149    -132.212      20.059\n",
-      "part_hh_kids_2019                  -6.9899     19.392     -0.360      0.719     -45.048      31.068\n",
-      "part_rented_2019                  -15.9925     11.552     -1.384      0.167     -38.664       6.679\n",
-      "part_unemployed_2019               -4.7765     43.124     -0.111      0.912     -89.412      79.859\n",
-      "part_poverty_2019                 -21.7269     12.488     -1.740      0.082     -46.237       2.783\n",
-      "part_vacant_2019                   17.5919     30.086      0.585      0.559     -41.455      76.639\n",
-      "part_college_2019                 -43.8117     25.903     -1.691      0.091     -94.649       7.026\n",
-      "dist_to_nearest_highrenttract       0.2134      0.132      1.616      0.106      -0.046       0.472\n",
-      "dist_to_nearest_highchangetract     0.4621      0.234      1.974      0.049       0.003       0.922\n",
-      "pctbuilt                           54.4227     59.410      0.916      0.360     -62.176     171.021\n",
-      "pctsold                           -23.8323     28.631     -0.832      0.405     -80.024      32.360\n",
+      "const                            1.725e+04   1.14e+04      1.508      0.132   -5199.938    3.97e+04\n",
+      "units_total                       163.5163     27.299      5.990      0.000     109.939     217.093\n",
+      "yearbuilt_avg                      -4.5138      5.835     -0.774      0.439     -15.966       6.938\n",
+      "n_ll_units                         -1.5184      0.652     -2.330      0.020      -2.797      -0.239\n",
+      "landlord_iscorp                 -2076.8814    235.375     -8.824      0.000   -2538.824   -1614.939\n",
+      "median_income_2019                 -0.0091      0.013     -0.696      0.487      -0.035       0.017\n",
+      "median_rent_2019                   -0.6060      0.634     -0.956      0.339      -1.850       0.638\n",
+      "part_black_2019                   -25.2114     13.987     -1.802      0.072     -52.662       2.239\n",
+      "part_latx_2019                    -23.0153     11.758     -1.957      0.051     -46.092       0.061\n",
+      "part_female_head_2019             -35.2867     36.657     -0.963      0.336    -107.228      36.655\n",
+      "part_hh_kids_2019                  -2.3825     19.126     -0.125      0.901     -39.919      35.154\n",
+      "part_rented_2019                  -15.1814     11.523     -1.318      0.188     -37.795       7.433\n",
+      "part_poverty_2019                 -20.2012     11.683     -1.729      0.084     -43.129       2.727\n",
+      "part_vacant_2019                   34.1467     28.021      1.219      0.223     -20.848      89.141\n",
+      "part_college_2019                 -47.8859     25.706     -1.863      0.063     -98.336       2.564\n",
+      "dist_to_nearest_highrenttract       0.1957      0.131      1.497      0.135      -0.061       0.452\n",
+      "dist_to_nearest_highchangetract     0.4739      0.233      2.038      0.042       0.018       0.930\n",
+      "pctbuilt                           57.7438     58.816      0.982      0.326     -57.687     173.175\n",
+      "pctsold                           -29.3273     28.075     -1.045      0.296     -84.426      25.772\n",
       "==============================================================================\n",
-      "Omnibus:                      430.211   Durbin-Watson:                   1.749\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             1956.954\n",
-      "Skew:                           2.196   Prob(JB):                         0.00\n",
-      "Kurtosis:                       8.606   Cond. No.                     9.21e+07\n",
+      "Omnibus:                      431.170   Durbin-Watson:                   1.747\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             1957.028\n",
+      "Skew:                           2.204   Prob(JB):                         0.00\n",
+      "Kurtosis:                       8.595   Cond. No.                     7.04e+06\n",
       "==============================================================================\n",
       "\n",
       "Warnings:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The condition number is large, 9.21e+07. This might indicate that there are\n",
+      "[2] The condition number is large, 7.04e+06. This might indicate that there are\n",
       "strong multicollinearity or other numerical problems.\n"
      ]
     }
    ],
    "source": [
-    "data=ellissamplefinaldf[['units_total','sqft_total','yearbuilt_avg','n_ll_properties', 'n_ll_units', 'landlord_iscorp',\n",
-    "                    'median_income_2019','median_rent_2019','median_value_2019','part_black_2019',\n",
-    "                    'part_latx_2019', 'part_white_2019', 'part_female_head_2019', 'part_hh_kids_2019',\n",
-    "                    'part_rented_2019', 'part_unemployed_2019', 'part_poverty_2019', 'part_vacant_2019',\n",
+    "data=ellissamplefinaldf[['units_total','yearbuilt_avg', 'n_ll_units', 'landlord_iscorp',\n",
+    "                    'median_income_2019','median_rent_2019','part_black_2019',\n",
+    "                    'part_latx_2019', 'part_female_head_2019', 'part_hh_kids_2019',\n",
+    "                    'part_rented_2019', 'part_poverty_2019', 'part_vacant_2019',\n",
     "                    'part_college_2019','dist_to_nearest_highrenttract', 'dist_to_nearest_highchangetract','pctbuilt','pctsold','time_to_file']]\n",
     "\n",
     "\n",
@@ -105,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "66466b47",
+   "id": "57c89a9c",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fe1b70b0",
+   "id": "b4ae27e8",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b229b821",
+   "id": "ab26fb82",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -287,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf970dc1",
+   "id": "4e8b26e0",
    "metadata": {},
    "outputs": [],
    "source": []
